--- a/index.html
+++ b/index.html
@@ -21,6 +21,43 @@
   <link rel="stylesheet" href="./src/main.css">
 </head>
 <body class="page__body">
+  <header class="header">
+    <div class="header__container">
+      <div class="header__content">
+        <div class="header__nav">
+          <div class="logo">
+            <a class="logo__link"  href="#">
+              <img
+                class="logo__image" 
+                src="./img/icons/logo-white.svg" 
+                alt="logo"
+              >
+            </a>
+          </div>
+
+          <div class="header__icons">
+            <div class="header__icon">
+              <a
+                href="tel:+1 234 555-55-55"
+                class="icon icon--phone header__icon-phone"
+                title="Call to us">
+                <div class="header__icon-link">+1 234 555-55-55</div>
+              </a>
+            </div>
+            <div class="header__icon">
+              <a
+                href="#menu"
+                class="icon icon--menu"
+                title="open menu">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="header__title">Take the Streets</div>
+      </div>
+    </div>
+  </header>
 
   <script src="./src/script.js"></script>
 </body>
