--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
       <div class="header__content">
         <div class="header__nav">
           <div class="logo">
-            <a class="logo__link"  href="#">
-              <img
-                class="logo__image" 
-                src="./img/icons/logo-white.svg" 
-                alt="logo"
-              >
+            <a 
+              class="logo__link"  
+              href="#"
+              title="Logo">
             </a>
           </div>
 
@@ -58,6 +56,62 @@
       </div>
     </div>
   </header>
+  <section class="menu" id="menu">
+    <div class="menu__container">
+      <div class="menu__content">
+        <div class="menu__nav">
+          <div class="logo">
+            <a 
+              class="logo__link logo__link--black"  
+              href="#"
+              title="Logo">
+            </a>
+          </div>
+
+          <div class="menu__icon">
+            <a
+              href="#"
+              class="icon icon--menu-close"
+              title="close menu">
+            </a>
+          </div>
+        </div>
+
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#" class="menu__link">Home</a>
+          </li>
+
+          <li class="menu__item">
+            <a href="#about" class="menu__link">About Us</a>
+          </li>
+
+          <li class="menu__item">
+            <a href="#compare" class="menu__link">Compare Bikes</a>
+          </li>
+
+          <li class="menu__item">
+            <a href="#details" class="menu__link">Details</a>
+          </li>
+
+          <li class="menu__item">
+            <a href="#contacts" class="menu__link">Contacts</a>
+          </li>
+        </ul>
+
+        <a 
+          class="menu__info menu__info--call" 
+          href="tel:+1 234 5555-55-55">
+          +1 234 5555-55-55
+        </a>
+
+        <a 
+          class="menu__info menu__info--book" href="mailto:hello@miami.com">
+          Book a test ride
+        </a>
+      </div>
+    </div>
+  </section>
 
   <script src="./src/script.js"></script>
 </body>
