--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="./src/main.css">
 </head>
 <body class="page__body">
-  <header class="header">
+  <header class="header" hidden>
     <div class="header__container">
       <div class="header__content">
         <div class="header__nav">
@@ -52,11 +52,11 @@
           </div>
         </div>
 
-        <div class="header__title">Take the Streets</div>
+        <h1 class="header__title">Take the Streets</h1>
       </div>
     </div>
   </header>
-  <section class="menu" id="menu">
+  <section class="menu" id="menu" hidden>
     <div class="menu__container">
       <div class="menu__content">
         <div class="menu__nav">
@@ -112,6 +112,75 @@
       </div>
     </div>
   </section>
+
+  <main class="main">
+    <section class="about" id="about" hidden>
+      <div class="about__container">
+        <div class="about__content">
+          <h2 class="about__title">
+            Move Free
+          </h2>
+          
+          <div class="about__text">
+            Shift your ride, not gears. Find the fastest way to move in the city as the bike adapts intuitively to power the speed you need.
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="compare" id="compare">
+      <div class="compare__container">
+        <h2 class="compare__title">Compare bikes</h2>
+        <div class="compare__items">
+          <div class="compare__item">
+            <div class="compare__photo">
+              <img 
+                src="./img/compare/compare1.png" 
+                alt="bike Sporty 4"
+                class="compare__img"
+              >
+            </div>
+            <div class="compare__name">Sporty 4</div>
+            <div class="compare__description">
+              The iconic frame brought to a new performance height as a sporty, active ride.
+              Lorem ipsum dolor sit amet consectetur, adipisicing 
+            </div>
+            <div class="compare__value">$ 2 590</div>
+          </div>
+
+          <div class="compare__item">
+            <div class="compare__photo">
+              <img 
+                src="./img/compare/compare2.png" 
+                alt="bike Ride in town ST"
+                class="compare__img"
+              >
+            </div>
+            <div class="compare__name">Ride in town ST</div>
+            <div class="compare__description">
+              An open frame for an upright riding position as the most comfortable ride in town.
+            </div>
+            <div class="compare__value">$ 2 590</div>
+          </div>
+
+          <div class="compare__item">
+            <div class="compare__photo">
+              <img 
+                src="./img/compare/compare3.png" 
+                alt="bike Agile ride 3"
+                class="compare__img"
+              >
+            </div>
+            <div class="compare__name">Agile ride 3</div>
+            <div class="compare__description">
+              The lightweight frame that has earned its street tread as a sleek, agile ride.
+            </div>
+            <div class="compare__value">$ 2 090</div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <script src="./src/script.js"></script>
 </body>
