Added transition for open menu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="./src/main.css">
 </head>
 <body class="page__body">
-  <header class="header" hidden>
+  <header class="header">
     <div class="header__container">
       <div class="header__content">
         <div class="header__nav">
@@ -56,7 +56,7 @@
       </div>
     </div>
   </header>
-  <section class="menu" id="menu" hidden>
+  <section class="menu" id="menu">
     <div class="menu__container">
       <div class="menu__content">
         <div class="menu__nav">
@@ -114,7 +114,7 @@
   </section>
 
   <main class="main">
-    <section class="about" id="about" hidden>
+    <section class="about" id="about">
       <div class="about__container">
         <div class="about__content">
           <h2 class="about__title">
