--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="./src/main.css">
 </head>
 <body class="page__body">
-  <header class="header">
+  <header class="header" hidden>
     <div class="header__container">
       <div class="header__content">
         <div class="header__nav">
@@ -56,7 +56,7 @@
       </div>
     </div>
   </header>
-  <section class="menu" id="menu">
+  <section class="menu" id="menu" hidden>
     <div class="menu__container">
       <div class="menu__content">
         <div class="menu__nav">
@@ -114,7 +114,7 @@
   </section>
 
   <main class="main">
-    <section class="about" id="about">
+    <section class="about" id="about" hidden>
       <div class="about__container">
         <div class="about__content">
           <h2 class="about__title">
@@ -128,7 +128,7 @@
       </div>
     </section>
 
-    <section class="compare" id="compare">
+    <section class="compare" id="compare" hidden>
       <div class="compare__container">
         <h2 class="compare__title">Compare bikes</h2>
         <div class="compare__items">
@@ -177,6 +177,83 @@
               <div class="compare__value">$ 2 090</div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="details" id="details">
+      <div class="details__container">
+        <h2 class="details__title">The details</h2>
+
+        <div class="details__item">
+          <div class="details__photos">
+            <div class="details__photo details__photo--big">
+              <img 
+                src="./img/details/details1.png" 
+                alt="Auto Unlock"
+                class="details__img"
+              >
+            </div>
+            <div class="details__photo details__photo--small">
+              <img 
+                src="./img/details/details2.png" 
+                alt="Auto Unlock"
+                class="details__img"
+              >
+            </div>
+          </div>
+          <h3 class="details__name">Auto Unlock</h3>
+          <div class="details__description">
+            The app senses when you're nearby to unlock automatically. GPS tracking so you know where your bike is and can track it anytime.
+          </div>
+        </div>
+
+        <div class="details__item">
+          <div class="details__photos">
+            <div class="details__photo details__photo--big">
+              <img 
+                src="./img/details/details3.png" 
+                alt="Range & Integrated lights"
+                class="details__img"
+              >
+            </div>
+            <div class="details__photo details__photo--small">
+              <img 
+                src="./img/details/details4.png" 
+                alt="Range & Integrated lights"
+                class="details__img"
+              >
+            </div>
+          </div>
+          <h3 class="details__name">Range & Integrated lights</h3>
+          <div class="details__description">
+            The removable battery has up to 70km battery autonomy and weighs only 2.4 kg. Lights integrated into the frame give you always-on visibility day and night.
+          </div>
+        </div>
+
+        <div class="details__item">
+          <div class="details__photos">
+            <div class="details__photo details__photo--small">
+              <img 
+                src="./img/details/details5.png" 
+                alt="Hydraulic disc brakes & Lightweight"
+                class="details__img"
+              >
+            </div>
+            <div class="details__photo details__photo--big">
+              <img 
+                src="./img/details/details6.png" 
+                alt="Hydraulic disc brakes & Lightweight"
+                class="details__img"
+              >
+            </div>
+          </div>
+          <h3 class="details__name">Hydraulic disc brakes & Lightweight</h3>
+          <div class="details__description">
+            Brakes with total stopping power the second you make contact. The removable battery has up to 70km battery autonomy and weighs only 2.4 kg. Lights integrated into the frame give you always-on visibility day and night.
+          </div>
+        </div>
+
+        <a class="details__link" href="#">Explore</a>
       </div>
     </section>
   </main>
