--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
       </div>
     </section>
   </main>
+  <footer class="footer"></footer>
   <script src="./src/script.js"></script>
 </body>
 </html>
