Updated buttons styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="./src/main.css">
 </head>
 <body class="page__body">
-  <header class="header" hidden>
+  <header class="header">
     <div class="header__container">
       <div class="header__content">
         <div class="header__nav">
@@ -56,8 +56,8 @@
       </div>
     </div>
   </header>
-  <section class="menu" id="menu" hidden>
-    <div class="menu__container">
+  <section class="menu" id="menu">
+    <div class="Menu__container">
       <div class="menu__content">
         <div class="menu__nav">
           <div class="logo">
@@ -114,7 +114,7 @@
   </section>
 
   <main class="main">
-    <section class="about" id="about" hidden>
+    <section class="about" id="about">
       <div class="about__container">
         <div class="about__content">
           <h2 class="about__title">
@@ -128,7 +128,7 @@
       </div>
     </section>
 
-    <section class="compare" id="compare" hidden>
+    <section class="compare" id="compare">
       <div class="compare__container">
         <h2 class="compare__title">Compare bikes</h2>
         <div class="compare__items">
@@ -180,7 +180,7 @@
       </div>
     </section>
 
-    <section class="details" id="details" hidden>
+    <section class="details" id="details">
       <div class="details__container">
         <h2 class="details__title">The details</h2>
 
@@ -257,7 +257,7 @@
       </div>
     </section>
 
-    <section class="contacts">
+    <section class="contacts" id="contacts">
       <div class="contacts__container">
         <h2 class="contacts__title">Contact us</h2>
         <div class="contacts__information">
