Fixed scroll in menu and changed form behaviour

--- a/index.html
+++ b/index.html
@@ -261,7 +261,11 @@
       <div class="contacts__container">
         <h2 class="contacts__title">Contact us</h2>
         <div class="contacts__information">
-          <form class="contacts__form form" action="#">
+          <form 
+            class="contacts__form form" 
+            action="#"
+            id="form"
+          >
             <input
               type="text"
               class="form__field"
